--- a/src/components/Quiz.css
+++ b/src/components/Quiz.css
@@ -1,11 +1,11 @@
-/* Highlight selected answer */
+
 .selected {
-  background-color: #d1e7ff; /* Light blue background */
-  border: 2px solid #3498db; /* Darker blue border */
+  background-color: #d1e7ff;
+  border: 2px solid #3498db;
   font-weight: bold;
 }
 
-/* Container styles */
+
 div {
   background-color: #f9f9f9;
   padding: 25px;
@@ -13,24 +13,24 @@ div {
   text-align: center;
   max-width: 500px;
   margin: 30px auto;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-/* Header styles */
+
 h2 {
   font-size: 26px;
   margin-bottom: 20px;
   color: #333;
 }
 
-/* Question text */
+
 p {
   font-size: 18px;
   margin: 12px 0;
 }
 
-/* Answer Options styles */
+
 ul {
   list-style-type: none;
   padding: 0;
@@ -52,7 +52,7 @@ li:hover {
   border-color: #3498db;
 }
 
-/* Button container to fix movement */
+
 .button-container {
   display: flex;
   justify-content: center;
@@ -60,7 +60,7 @@ li:hover {
   margin-top: 20px;
 }
 
-/* Button styles */
+
 button {
   background-color: #3498db;
   color: white;
@@ -77,7 +77,7 @@ button:hover {
   background-color: #1f77c5;
 }
 
-/* Score styles */
+
 .score {
   font-size: 20px;
   font-weight: bold;
@@ -85,7 +85,7 @@ button:hover {
   margin: 20px 0;
 }
 
-/* For review sections */
+
 .review {
   text-align: left;
   margin-top: 20px;
